<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tracsactiontracker.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.tracsactiontracker.ui.add.AddTransactionFragment"
        android:label="@string/title_add" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.example.tracsactiontracker.ui.summary.SummaryFragment"
        android:label="@string/title_summary" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.tracsactiontracker.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation> 